Add Quit message
The quit message is sent by the Client to correctly quit the game.

--- a/TypeRealm.Messages/TypeRealm.Messages.csproj
+++ b/TypeRealm.Messages/TypeRealm.Messages.csproj
@@ -42,6 +42,7 @@
     <Compile Include="IndexedCollection[TValue].cs" />
     <Compile Include="MessageSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
