--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -40,6 +40,9 @@
   <ItemGroup>
     <Compile Include="ConnectedClient.cs" />
     <Compile Include="ILogger.cs" />
+    <Compile Include="InMemoryPlayerRepository.cs" />
+    <Compile Include="IPlayerRepository.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
