--- a/TypeRealm.Domain/TypeRealm.Domain.csproj
+++ b/TypeRealm.Domain/TypeRealm.Domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{435F0B6C-36CD-444C-BCB9-26E2F235BD97}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{1EDF82DD-EDF0-428A-8B89-E074E65056AD}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TypeRealm.Server</RootNamespace>
-    <AssemblyName>TypeRealm.Server</AssemblyName>
+    <RootNamespace>TypeRealm.Domain</RootNamespace>
+    <AssemblyName>TypeRealm.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -30,30 +30,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectedClient.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="InMemoryPlayerRepository.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="IPlayerRepository.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TypeRealm.Domain\TypeRealm.Domain.csproj">
-      <Project>{1EDF82DD-EDF0-428A-8B89-E074E65056AD}</Project>
-      <Name>TypeRealm.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TypeRealm.Messages\TypeRealm.Messages.csproj">
-      <Project>{EFF1A6FE-B17E-4EFF-BFA7-0F7FEAC1A98A}</Project>
-      <Name>TypeRealm.Messages</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
