Split ConsoleLogger to separate file
ConsoleLogger was declared in the same file where ILogger interface
resides. This leads to confusion when trying to find ConsoleLogger class
in the codebase.

--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectedClient.cs" />
+    <Compile Include="ConsoleLogger.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="InMemoryPlayerRepository.cs" />
     <Compile Include="Program.cs" />
