--- a/TypeRealm.Messages/TypeRealm.Messages.csproj
+++ b/TypeRealm.Messages/TypeRealm.Messages.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MessageSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quit.cs" />
+    <Compile Include="Say.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
