--- a/TypeRealm.Messages.Tests/TypeRealm.Messages.Tests.csproj
+++ b/TypeRealm.Messages.Tests/TypeRealm.Messages.Tests.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IndexedCollectionTests.cs" />
     <Compile Include="MessageSerializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
