Add basic message dispatching
Use message dispatcher interface to dispatch messages across the system,
include simple echo message dispatcher for testing purposes.

--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -40,7 +40,9 @@
   <ItemGroup>
     <Compile Include="ConnectedClient.cs" />
     <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="EchoMessageDispatcher.cs" />
     <Compile Include="ILogger.cs" />
+    <Compile Include="IMessageDispatcher.cs" />
     <Compile Include="InMemoryAccountRepository.cs" />
     <Compile Include="InMemoryPlayerRepository.cs" />
     <Compile Include="Program.cs" />
