--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -44,6 +44,7 @@
     <Compile Include="EchoMessageDispatcher.cs" />
     <Compile Include="IAuthorizationService.cs" />
     <Compile Include="IClientListenerFactory.cs" />
+    <Compile Include="IConnection.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IMessageDispatcher.cs" />
     <Compile Include="InMemoryAccountRepository.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="StreamConnection.cs" />
     <Compile Include="TcpClientListener.cs" />
     <Compile Include="TcpClientListenerFactory.cs" />
   </ItemGroup>
