--- a/TypeRealm.Domain/TypeRealm.Domain.csproj
+++ b/TypeRealm.Domain/TypeRealm.Domain.csproj
@@ -35,10 +35,13 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountId.cs" />
     <Compile Include="IAccountRepository.cs" />
     <Compile Include="Account.cs" />
     <Compile Include="IPlayerRepository.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="PlayerId.cs" />
+    <Compile Include="Primitive.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
