--- a/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
+++ b/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorizationServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
   </ItemGroup>
