--- a/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
+++ b/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthorizationServiceTests.cs" />
+    <Compile Include="Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
   </ItemGroup>
