Add tests for identities, add param name to argument exceptions
Add tests for identities: PlayerId and AccountId.
Fix argument exceptions being thrown without param name passed to them.

--- a/TypeRealm.Domain.Tests/TypeRealm.Domain.Tests.csproj
+++ b/TypeRealm.Domain.Tests/TypeRealm.Domain.Tests.csproj
@@ -50,8 +50,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountIdTests.cs" />
     <Compile Include="AccountTests.cs" />
     <Compile Include="Fixture.cs" />
+    <Compile Include="PlayerIdTests.cs" />
     <Compile Include="PlayerNameTests.cs" />
     <Compile Include="PlayerTests.cs" />
     <Compile Include="PrimitiveTests.cs" />
