--- a/TypeRealm.Domain.Tests/TypeRealm.Domain.Tests.csproj
+++ b/TypeRealm.Domain.Tests/TypeRealm.Domain.Tests.csproj
@@ -53,11 +53,14 @@
     <Compile Include="AccountIdTests.cs" />
     <Compile Include="AccountTests.cs" />
     <Compile Include="Fixture.cs" />
+    <Compile Include="Locations.cs" />
+    <Compile Include="PlayerAsserts.cs" />
     <Compile Include="PlayerIdTests.cs" />
     <Compile Include="PlayerNameTests.cs" />
     <Compile Include="PlayerTests.cs" />
     <Compile Include="PrimitiveTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Roads.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
