--- a/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
+++ b/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
@@ -38,15 +38,20 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connection.cs" />
+    <Compile Include="Networking\Connection.cs" />
+    <Compile Include="Networking\ConnectionFailedException.cs" />
     <Compile Include="Networking\IConnectionFactory.cs" />
-    <Compile Include="Networking\INetworkConnection.cs" />
+    <Compile Include="Networking\IConnection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Networking\TcpConnection.cs" />
     <Compile Include="Networking\TcpConnectionFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TypeRealm.Domain\TypeRealm.Domain.csproj">
+      <Project>{1EDF82DD-EDF0-428A-8B89-E074E65056AD}</Project>
+      <Name>TypeRealm.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TypeRealm.Messages\TypeRealm.Messages.csproj">
       <Project>{EFF1A6FE-B17E-4EFF-BFA7-0F7FEAC1A98A}</Project>
       <Name>TypeRealm.Messages</Name>
