--- a/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
+++ b/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
@@ -38,10 +38,14 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IOutput.cs" />
+    <Compile Include="Networking\ConnectionFactory.cs" />
     <Compile Include="Networking\Connection.cs" />
     <Compile Include="Networking\ConnectionFailedException.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Networking\IConnectionFactory.cs" />
     <Compile Include="Networking\IConnection.cs" />
+    <Compile Include="ConsoleOutput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Networking\TcpConnection.cs" />
