Add basic message handling and movement process update

--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -50,6 +50,7 @@
     <Compile Include="InMemoryAccountRepository.cs" />
     <Compile Include="InMemoryLocationStore.cs" />
     <Compile Include="InMemoryPlayerRepository.cs" />
+    <Compile Include="MessageDispatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
