--- a/TypeRealm.Domain/TypeRealm.Domain.csproj
+++ b/TypeRealm.Domain/TypeRealm.Domain.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Account.cs" />
     <Compile Include="ILocationStore.cs" />
     <Compile Include="IPlayerRepository.cs" />
+    <Compile Include="IRoadStore.cs" />
     <Compile Include="LocationId.cs" />
     <Compile Include="MovementInformation.cs" />
     <Compile Include="Road.cs" />
