MessageProcessor abstraction to handle heartbeat messages
Possibly this abstraction can also be used for making message queue and
handling other "technical" messages out of the scope of the game world.

--- a/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
+++ b/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
@@ -42,15 +42,17 @@
     <Compile Include="Data\InMemoryDataStore.cs" />
     <Compile Include="Data\Location.cs" />
     <Compile Include="Data\Road.cs" />
+    <Compile Include="Networking\GameMessageDispatcher.cs" />
+    <Compile Include="Networking\IMessageDispatcher.cs" />
+    <Compile Include="Networking\IMessageProcessor.cs" />
     <Compile Include="IOutput.cs" />
     <Compile Include="IPrinter.cs" />
-    <Compile Include="Networking\ConnectionFactory.cs" />
-    <Compile Include="Networking\Connection.cs" />
-    <Compile Include="Networking\ConnectionFailedException.cs" />
+    <Compile Include="Networking\MessageProcessor.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Networking\IConnectionFactory.cs" />
     <Compile Include="Networking\IConnection.cs" />
     <Compile Include="ConsoleOutput.cs" />
+    <Compile Include="Networking\TaskExtentions.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
