--- a/TypeRealm.Messages/TypeRealm.Messages.csproj
+++ b/TypeRealm.Messages/TypeRealm.Messages.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Authorize.cs" />
     <Compile Include="Disconnected.cs" />
+    <Compile Include="HeartBeat.cs" />
     <Compile Include="Movement\MovementDirection.cs" />
     <Compile Include="Movement\MovementStatus.cs" />
     <Compile Include="Movement\EnterRoad.cs" />
