--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="AuthorizationService.cs" />
     <Compile Include="ConnectedClient.cs" />
+    <Compile Include="ConnectionExtensions.cs" />
     <Compile Include="ConsoleLogger.cs" />
     <Compile Include="EchoMessageDispatcher.cs" />
     <Compile Include="IAuthorizationService.cs" />
