--- a/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
+++ b/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
+    <Compile Include="StatusFactoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
