--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -43,17 +43,17 @@
   <ItemGroup>
     <Compile Include="AuthorizationService.cs" />
     <Compile Include="ConnectedClient.cs" />
-    <Compile Include="ConsoleLogger.cs" />
-    <Compile Include="EchoMessageDispatcher.cs" />
+    <Compile Include="Infrastructure\ConsoleLogger.cs" />
+    <Compile Include="Infrastructure\EchoMessageDispatcher.cs" />
     <Compile Include="IAuthorizationService.cs" />
     <Compile Include="IClientListenerFactory.cs" />
     <Compile Include="IConnection.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IMessageDispatcher.cs" />
-    <Compile Include="InMemoryAccountRepository.cs" />
-    <Compile Include="InMemoryLocationStore.cs" />
-    <Compile Include="InMemoryPlayerRepository.cs" />
-    <Compile Include="InMemoryRoadStore.cs" />
+    <Compile Include="Infrastructure\InMemoryAccountRepository.cs" />
+    <Compile Include="Infrastructure\InMemoryLocationStore.cs" />
+    <Compile Include="Infrastructure\InMemoryPlayerRepository.cs" />
+    <Compile Include="Infrastructure\InMemoryRoadStore.cs" />
     <Compile Include="IStatusFactory.cs" />
     <Compile Include="MessageDispatcher.cs" />
     <Compile Include="Program.cs" />
