--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -46,8 +46,8 @@
     <Compile Include="Infrastructure\ConsoleLogger.cs" />
     <Compile Include="Infrastructure\EchoMessageDispatcher.cs" />
     <Compile Include="IAuthorizationService.cs" />
-    <Compile Include="IClientListenerFactory.cs" />
-    <Compile Include="IConnection.cs" />
+    <Compile Include="Networking\IClientListenerFactory.cs" />
+    <Compile Include="Networking\IConnection.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IMessageDispatcher.cs" />
     <Compile Include="Infrastructure\InMemoryAccountRepository.cs" />
@@ -60,9 +60,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="StatusFactory.cs" />
-    <Compile Include="StreamConnection.cs" />
-    <Compile Include="TcpClientListener.cs" />
-    <Compile Include="TcpClientListenerFactory.cs" />
+    <Compile Include="Networking\StreamConnection.cs" />
+    <Compile Include="Networking\TcpClientListener.cs" />
+    <Compile Include="Networking\TcpClientListenerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TypeRealm.Domain\TypeRealm.Domain.csproj">
