--- a/TypeRealm.Server/TypeRealm.Server.csproj
+++ b/TypeRealm.Server/TypeRealm.Server.csproj
@@ -46,16 +46,18 @@
     <Compile Include="Infrastructure\ConsoleLogger.cs" />
     <Compile Include="Infrastructure\EchoMessageDispatcher.cs" />
     <Compile Include="IAuthorizationService.cs" />
+    <Compile Include="Messaging\IMessageHandler.cs" />
+    <Compile Include="Handlers\MovementHandler.cs" />
     <Compile Include="Networking\IClientListenerFactory.cs" />
     <Compile Include="Networking\IConnection.cs" />
     <Compile Include="ILogger.cs" />
-    <Compile Include="IMessageDispatcher.cs" />
+    <Compile Include="Messaging\IMessageDispatcher.cs" />
     <Compile Include="Infrastructure\InMemoryAccountRepository.cs" />
     <Compile Include="Infrastructure\InMemoryLocationStore.cs" />
     <Compile Include="Infrastructure\InMemoryPlayerRepository.cs" />
     <Compile Include="Infrastructure\InMemoryRoadStore.cs" />
     <Compile Include="IStatusFactory.cs" />
-    <Compile Include="MessageDispatcher.cs" />
+    <Compile Include="Messaging\MessageDispatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
