--- a/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
+++ b/TypeRealm.Server.Tests/TypeRealm.Server.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="AuthorizationServiceTests.cs" />
     <Compile Include="ConnectedClientTests.cs" />
     <Compile Include="Fixture.cs" />
+    <Compile Include="MessageDispatcherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
     <Compile Include="StatusFactoryTests.cs" />
