--- a/TypeRealm.Messages.Tests/TypeRealm.Messages.Tests.csproj
+++ b/TypeRealm.Messages.Tests/TypeRealm.Messages.Tests.csproj
@@ -57,9 +57,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonMessages.cs" />
+    <Compile Include="ConnectionMessages.cs" />
     <Compile Include="IndexedCollectionTests.cs" />
     <Compile Include="MessageSerializerTests.cs" />
+    <Compile Include="MovementMessages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
