--- a/TypeRealm.Messages.Tests/TypeRealm.Messages.Tests.csproj
+++ b/TypeRealm.Messages.Tests/TypeRealm.Messages.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="MovementMessages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Should.cs" />
+    <Compile Include="TypeLoaderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
