--- a/TypeRealm.Domain.Tests/TypeRealm.Domain.Tests.csproj
+++ b/TypeRealm.Domain.Tests/TypeRealm.Domain.Tests.csproj
@@ -53,15 +53,20 @@
   <ItemGroup>
     <Compile Include="AccountIdTests.cs" />
     <Compile Include="AccountTests.cs" />
-    <Compile Include="Fixture.cs" />
+    <Compile Include="DistanceTests.cs" />
+    <Compile Include="Common\Fixture.cs" />
+    <Compile Include="LocationIdTests.cs" />
     <Compile Include="Locations.cs" />
-    <Compile Include="PlayerAsserts.cs" />
+    <Compile Include="Common\PlayerAssertExtensions.cs" />
     <Compile Include="PlayerIdTests.cs" />
     <Compile Include="PlayerNameTests.cs" />
     <Compile Include="PlayerTests.cs" />
     <Compile Include="PrimitiveTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Roads.cs" />
+    <Compile Include="RoadExtensionsTests.cs" />
+    <Compile Include="RoadIdTests.cs" />
+    <Compile Include="Common\Roads.cs" />
+    <Compile Include="RoadTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
