--- a/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
+++ b/TypeRealm.ConsoleApp/TypeRealm.ConsoleApp.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Data\InMemoryDataStore.cs" />
     <Compile Include="Data\Location.cs" />
     <Compile Include="Data\Road.cs" />
+    <Compile Include="InputHandler.cs" />
     <Compile Include="Messages\Reconnecting.cs" />
     <Compile Include="Networking\GameMessageDispatcher.cs" />
     <Compile Include="Networking\IMessageDispatcher.cs" />
@@ -49,12 +50,12 @@
     <Compile Include="IOutput.cs" />
     <Compile Include="IPrinter.cs" />
     <Compile Include="Networking\MessageProcessor.cs" />
-    <Compile Include="Game.cs" />
     <Compile Include="Networking\IConnectionFactory.cs" />
     <Compile Include="Networking\IConnection.cs" />
     <Compile Include="ConsoleOutput.cs" />
     <Compile Include="Networking\Reconnect.cs" />
     <Compile Include="Networking\TaskExtentions.cs" />
+    <Compile Include="OutputHandler.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
